Added button "Use in main window (without camera" to pass parameters from the Navogator to main window excluding camera and targer positions

--- a/mandelbulber2/qt/navigator_window.ui
+++ b/mandelbulber2/qt/navigator_window.ui
@@ -343,6 +343,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="pushButtonUse_without_camera">
+       <property name="text">
+        <string>Use in main window (without camera)</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="pushButtonCancel">
        <property name="text">
         <string>Cancel</string>
